2021-10-25: Ver 0.3-6
  * Change configure.ac for autoconf-2.71

2021-04-17: Ver 0.3-6
  * Check and add "libzmq>=4.3.0" and "-DENABLE_DRAFTS=ON" options.
  * Add more ZMQ socket options up to libzmq 4.3.4 (may not stable).

2021-02-27: Ver 0.3-6
  * Add more ZMQ socket options.
  * Add timeout for connection in tests.

2021-02-09: Ver 0.3-5
  * Update "conf.sub" and "conf.guess" from CRAN.

2020-12-13: Ver 0.3-4
  * Change "http://" to "https://".

2020-09-07: Ver 0.3-4
  * Fix warning 'char* strncpy(char*, const char*, size_t)' output truncated
    due to "-Werror=stringop-truncation" by gcc 8.3.1
  * Fix a "buf[1]" in zmq.send() call in "R_zmq_sendrecv.r"

2019-07-27: Ver 0.3-4
  * For osx, change "install.libs.R" and "zzz.r.in" for staged installation.

2019-07-10: Ver 0.3-4
  * Roll back to (R >= 3.5.0).
  * Change detection of ZeroMQ library version to "4.2.2" from "4.0.4".
  * Roll detection of ZeroMQ library version to "4.0.4".
  * Block ZeroMQ library version "4.1.6".

2019-05-03: Ver 0.3-4
  * Add "StagedInstall: FALSE" to DESCRIPTION to turn off WARNING in macos.

2019-04-26: Ver 0.3-4
  * Revmoe "^M" from "src/zmqsrc/src/condition_variable.hpp".

2019-04-01: Ver 0.3-4
  * Support REQ/REP sockets in sendfile/recvfile functions.

2019-02-18: Ver 0.3-4
  * Add "R/R_zmq_transfers.r" for transferfing files and directories.
  * Add importFrom utils for zip and unzip.
  * Remove "-Werror" from "src/zmqsrc/configure" to pass "R CMD check".

2019-02-17: Ver 0.3-4
  * Register "R_zmq_send_file" and "R_zmq_recv_file" in "src/zzz.c".
  * Fix Windows binary files transfer problems.

2018-04-30: Ver 0.3-3
  * Change some problems related UTF-8, latin1 TeX inputs, especially for
    TeXLive 2018.

2018-01-27: Ver 0.3-2
  * Add overwrite.shpkg.rpath() for osx.
  * Adjust .onLoad() for osx with ZMQ static library.

2018-01-18: Ver 0.3-2
  * Adjust .onLoad().
  * Add back "src/pkg.m4".

2018-01-07: Ver 0.3-1
  * Test with JuniperKernel.

2018-01-06: Ver 0.3-1