@@ -2,28 +2,33 @@ suppressPackageStartupMessages(library(pbdZMQ))
 
 ### zmq interface
 
-### In general.
+### In general and separate files
 # server_context = zmq.ctx.new()
 # server_socket = zmq.socket(server_context, .pbd_env$ZMQ.ST$REP)
 # client_context = zmq.ctx.new()
 # client_socket = zmq.socket(client_context, .pbd_env$ZMQ.ST$REQ)
-### For CRAN testing in local (the same process) only to avoid block.
+### Server file
+# zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$CONNECT_TIMEOUT, 1000L)
+# zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$RCVTIMEO, 1000L)
+# zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$SNDTIMEO, 1000L)
+# zmq.bind(server_socket, "tcp://*:55555")
+### client file
+# zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$CONNECT_TIMEOUT, 1000L)
+# zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$RCVTIMEO, 1000L)
+# zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$SNDTIMEO, 1000L)
+# zmq.connect(client_socket, "tcp://localhost:55555")
+
+### For CRAN testing in local (the same process) only to avoid block
 cran_context = zmq.ctx.new()
 server_socket = zmq.socket(cran_context, .pbd_env$ZMQ.ST$REP)
 client_socket = zmq.socket(cran_context, .pbd_env$ZMQ.ST$REQ)
-
 ### Server
-zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$CONNECT_TIMEOUT, 1000L)
-zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$RCVTIMEO, 1000L)
-zmq.setsockopt(server_socket, .pbd_env$ZMQ.SO$SNDTIMEO, 1000L)
-zmq.bind(server_socket, "tcp://*:55555")
-
+zmq.bind(server_socket, "inproc://#1")
 ### client
-zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$CONNECT_TIMEOUT, 1000L)
-zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$RCVTIMEO, 1000L)
-zmq.setsockopt(client_socket, .pbd_env$ZMQ.SO$SNDTIMEO, 1000L)
-zmq.connect(client_socket, "tcp://localhost:55555")
+zmq.connect(client_socket, "inproc://#1")
 
+
+### Test pbdZMQ
 tester = function(indata)
 {
   zmq.msg.send(indata, client_socket)
