@@ -1,5 +1,7 @@
 2021-10-25: Ver 0.3-6
   * Change configure.ac for autoconf-2.71
+  * Change tests to local in-process (inter-thread) communication transport
+    "zmq_inproc".
 
 2021-04-17: Ver 0.3-6
   * Check and add "libzmq>=4.3.0" and "-DENABLE_DRAFTS=ON" options.
